Add link in menu

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <ul class="navbar">
   <li><a href="index.html"> Home</a></li>
   <li><a href="forms.html"> Forms</a></li>
+  <li><a href="exercises.html"> Exercises</a></li>
   <li><a href="https://www.blizzard.com/fr-fr/"> BliBli</a></li>
 </ul>
     <p><h1>Does it work?</h1></p>
