--- a/exercises.html
+++ b/exercises.html
@@ -4,11 +4,13 @@
     <meta charset="utf-8">
 	 <link rel="stylesheet" type="text/css" href="style.css">
   </head>
-  <body>
+  <body onload="init()">
   <ul class="navbar">
 	<li><a href="index.html"> Home</a></li>
   </ul>
     <button type="button" onclick="greet()"> Say Bonjour</button>
+	<img src="icons\car1.png" id="first">
+	
 	<script src="script.js"></script>
   </body>
 </html>
