--- a/exercises.html
+++ b/exercises.html
@@ -9,7 +9,7 @@
 	<li><a href="index.html"> Home</a></li>
   </ul>
     <button type="button" onclick="greet()"> Say Bonjour</button>
-	<img src="icons\car1.png" id="first">
+	<img src="car1.png" id="first">
 	
 	<script src="script.js"></script>
   </body>
