--- a/exercises.html
+++ b/exercises.html
@@ -8,8 +8,19 @@
   <ul class="navbar">
 	<li><a href="index.html"> Home</a></li>
   </ul>
-    <button type="button" onclick="greet()"> Say Bonjour</button>
-	<img src="car1.png" id="first">
+	<div>
+		<button type="button" onclick="greet()"> Say Bonjour</button>
+	</div>
+	
+	<div>
+		<img src="car1.png" id="first">
+	</div>
+	
+	<div id="container">
+		<img src="car1.png">
+		<img src="car1.png">
+		<img src="car1.png">
+	</div>
 	
 	<script src="script.js"></script>
   </body>
