--- a/exercises.html
+++ b/exercises.html
@@ -20,6 +20,8 @@
 		<img src="car1.png">
 		<img src="car1.png">
 		<img src="car1.png">
+		<img src="car1.png">
+		<img src="car1.png">
 	</div>
 	
 	<script src="script.js"></script>
