--- a/exercises.html
+++ b/exercises.html
@@ -1,4 +1,3 @@
-  
 <!DOCTYPE html>
 <html>
   <head>
@@ -28,6 +27,12 @@
 	<div id="text">
 	</div>
 	
+	<div>
+		<span id="new_element">
+			Here should appear our flower:
+		</span>
+	</div>
+
 	<script src="script.js"></script>
   </body>
 </html>
