--- a/exercises.html
+++ b/exercises.html
@@ -33,6 +33,18 @@
 		</span>
 	</div>
 
+	<div>
+	<span id="rainbow" style="font-size: 25px;">
+		<span>Don't</span>
+		<span>worry be</span>
+		<span>H</span>
+		<span>A</span>
+		<span>P</span>
+		<span>P</span>
+		<span>Y</span>
+	</span>
+	</div>
+	
 	<script src="script.js"></script>
   </body>
 </html>
