--- a/exercises.html
+++ b/exercises.html
@@ -45,6 +45,44 @@
 	</span>
 	</div>
 	
+	<div id="event">
+    	<div>
+	    	<img src="flower1.png">
+	    	<img src="flower1.png">
+	    	<img src="flower1.png">
+	    	<img src="flower1.png">
+	    	<img src="flower1.png">
+    	</div>
+    	<div>
+	    	<img src="flower1.png">
+	    	<img src="flower1.png">
+	    	<img src="flower1.png">
+	    	<img src="flower1.png">
+	    	<img src="flower1.png">
+    	</div>
+    	<div>
+	    	<img src="flower1.png">
+	    	<img src="flower1.png">
+	    	<img src="flower1.png">
+	    	<img src="flower1.png">
+	    	<img src="flower1.png">
+    	</div>
+    	<div>
+	    	<img src="flower1.png">
+	    	<img src="flower1.png">
+	    	<img src="flower1.png">
+	    	<img src="flower1.png">
+	    	<img src="flower1.png">
+    	</div>
+    	<div>
+	    	<img src="flower1.png">
+	    	<img src="flower1.png">
+	    	<img src="flower1.png">
+	    	<img src="flower1.png">
+	    	<img src="flower1.png">
+    	</div>
+    </div>
+	
 	<script src="script.js"></script>
   </body>
 </html>
