--- a/exercises.html
+++ b/exercises.html
@@ -83,6 +83,13 @@
     	</div>
     </div>
 	
+	<div>
+		<label for="item">Item to buy</label>
+		<input type="text" id="item" name="item">
+		<button type="button" 
+	</div>
+	
 	<script src="script.js"></script>
+	
   </body>
 </html>
