--- a/exercises.html
+++ b/exercises.html
@@ -86,7 +86,13 @@
 	<div>
 		<label for="item">Item to buy</label>
 		<input type="text" id="item" name="item">
-		<button type="button" 
+		<button type="button" id="additem" onclick="addItem()"> Add</button>
+	</div>
+	
+	<div>
+		<ul id="list">
+			
+		</ul>
 	</div>
 	
 	<script src="script.js"></script>
