--- a/exercises.html
+++ b/exercises.html
@@ -82,7 +82,14 @@
 	    	<img src="flower1.png">
     	</div>
     </div>
-	
+	<div>
+		<input type="checkbox" id="important" name="important" value="important">
+		<label for="important"> Is important</label>
+	</div>
+	<div>
+		<input type="checkbox" id="groceries" name="groceries" value="groceries">
+		<label for="groceries"> Can be bought in groceries</label>
+	</div>
 	<div>
 		<label for="item">Item to buy</label>
 		<input type="text" id="item" name="item">
