--- a/exercises.html
+++ b/exercises.html
@@ -98,10 +98,14 @@
 	
 	<div>
 		<ul id="list">
-			
 		</ul>
 	</div>
 	
+	<div>
+		<label for="nombre">Number</label>
+		<input type="text" id="nombre" name="nombre">
+		<button type="button" id="remove" onclick="removeItem()"> Remove</button>
+	</div>
 	<script src="script.js"></script>
 	
   </body>
