--- a/index.html
+++ b/index.html
@@ -7,14 +7,51 @@
   <body>
   <ul class="navbar">
   <li><a href="index.html"> Home</a></li>
-  <li><a href="forms.html"> Forms</a></li>
-  <li><a href="exercises.html"> Exercises</a></li>
+  <li><a href="tasks.html"> Forms</a></li>
+  <li><a href="shopping.html"> Exercises</a></li>
   <li><a href="https://www.blizzard.com/fr-fr/"> BliBli</a></li>
 </ul>
-    <p><h1>Does it work?</h1></p>
-	<p> azeahzehuazrohiaiorhazoroiahio </p>
-	<p> azeaozjirhoiafhioa
-	<p> aieahieazihehoiazeiuazohieazoeoiohiaez </p>
+    <h1>Sonic the hedgehog</h1>
+	
+	<h3> Who is Sonic ? </h3>
+	
+	<p class="green">Sonic the Hedgehog[a] is a Japanese video game series and media franchise created and owned by Sega.
+	The franchise centers on Sonic, an anthropomorphic blue hedgehog who battles the evil Doctor Eggman, 
+	a mad scientist. The main Sonic the Hedgehog games are platformers mostly developed by Sonic Team; other games,
+	developed by various studios, include spin-offs in the racing, fighting, party and sports genres. 
+	The franchise also incorporates printed media, animations, a 2020 feature film, and merchandise.</p>
+	<p class="green"> The first Sonic game, released in 1991 for the Sega Genesis, was developed after Sega requested a 
+	mascot character to compete with Nintendo's mascot Mario. Its success helped Sega become one of the leading video
+	game companies during the 16-bit era of the early 1990s. Sega Technical Institute developed the next three Sonic
+	games in addition to Sonic Spinball (1993). After a hiatus during the unsuccessful Saturn era, the first major 
+	3D Sonic game, Sonic Adventure, was released in 1998 for the Dreamcast. Sega exited the console market and shifted 
+	to third-party development in 2001, continuing the series on Nintendo, Xbox, and PlayStation systems.</p>
+	<p class="green"> While Sonic games often have unique game mechanics and stories, they feature recurring elements such as the ring-based health system, locations, and speedy gameplay. Games typically feature Sonic setting out to stop Eggman's schemes for world domination, and the player navigates levels that include springs, slopes, bottomless pits, and vertical loops. While Sonic and Eggman were the only characters introduced in the first game, the series would go on to have a large cast of characters; some, such as Miles "Tails" Prower, Knuckles the Echidna, and Shadow the Hedgehog, starred in self-titled spin-offs. 
+	The franchise has also been represented in crossovers such as Sega All-Stars and Nintendo's Super Smash Bros. series.</p>
+	<p class="red"> Sonic the Hedgehog is Sega's flagship franchise and one of the bestselling video game franchises, 
+	selling 89 million by March 2011 and grossing over $5 billion by 2014. Series sales and free-to-play mobile game 
+	downloads totaled 920 million by 2019. The Genesis Sonic games have been described as representative of the culture 
+	of the 1990s and listed among the greatest of all time. Although later games have been criticized for a perceived decline in quality compared to earlier installments, 
+	Sonic is influential in the video game industry and is frequently referenced in popular culture.</p>
+	<p class="red">In 1990, Sega of Japan president Hayao Nakayama decided Sega needed a flagship series and mascot to 
+	compete with Nintendo's Mario series. Nintendo had recently released Super Mario Bros. 3, at the 
+	time the bestselling video game ever. Sega's strategy had been based on porting its successful arcade games to 
+	its 16-bit console, the Genesis; however, Nakayama recognized that Sega needed a star character in a game that 
+	could demonstrate the power of the Genesis's hardware. An internal contest was held to determine a flagship 
+	game and company mascot, with a specific focus on the American audience. Among the various teams working on 
+	proposals were artist Naoto Ohshima and programmer Yuji Naka. The gameplay of Sonic the Hedgehog (1991) 
+	originated with a tech demo created by Naka, who had developed an algorithm that allowed a sprite to move 
+	smoothly on a curve by determining its position with a dot matrix. Naka's prototype was a platform game that 
+	involved a fast-moving character rolling in a ball through a long winding tube.
+	Sega management accepted the duo's project and they were joined by designer Hirokazu Yasuhara.</p>
+	
+	<img src="sonic.png">
+	
+	<ol>
+		<li>Sonic</li>
+		<li>Knuckles</li>
+		<li>Tails</li>
+	<ol>
 	
   </body>
 </html>
