--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   </head>
   <body>
   <ul class="navbar">
-  <li><a href="index.html"> Home</a></li>
-  <li><a href="tasks.html"> Forms</a></li>
-  <li><a href="shopping.html"> Exercises</a></li>
+  <li><a href="index.html"> Index </a></li>
+  <li><a href="tasks.html"> Tasks</a></li>
+  <li><a href="shopping.html"> Shopping</a></li>
   <li><a href="https://www.blizzard.com/fr-fr/"> BliBli</a></li>
 </ul>
     <h1>Sonic the hedgehog</h1>
