--- a/shopping.html
+++ b/shopping.html
@@ -29,6 +29,8 @@
 		<input type="text" id="nombre" name="nombre">
 		<button type="button" id="remove" onclick="removeItem()"> Remove</button>
 	</div>
-		
+	
+	<script src="script.js"></script>
+
   </body>
 </html>
