--- a/index.html
+++ b/index.html
@@ -7,50 +7,27 @@
   <body>
   <ul class="navbar">
   <li><a href="index.html"> Index </a></li>
-  <li><a href="tasks.html"> Tasks</a></li>
+  <li><a href="tasks.html"> Flowers</a></li>
   <li><a href="shopping.html"> Shopping</a></li>
-  <li><a href="https://www.blizzard.com/fr-fr/"> BliBli</a></li>
+  <li><a href="https://en.wikipedia.org/wiki/Sausage"> Sausage knowledge</a></li>
 </ul>
-    <h1>Sonic the hedgehog</h1>
+    <h1>The Art of Sausage</h1>
 	
-	<h3> Who is Sonic ? </h3>
+	<h3> What is the origin of sausages ? </h3>
 	
-	<p class="green">Sonic the Hedgehog[a] is a Japanese video game series and media franchise created and owned by Sega.
-	The franchise centers on Sonic, an anthropomorphic blue hedgehog who battles the evil Doctor Eggman, 
-	a mad scientist. The main Sonic the Hedgehog games are platformers mostly developed by Sonic Team; other games,
-	developed by various studios, include spin-offs in the racing, fighting, party and sports genres. 
-	The franchise also incorporates printed media, animations, a 2020 feature film, and merchandise.</p>
-	<p class="green"> The first Sonic game, released in 1991 for the Sega Genesis, was developed after Sega requested a 
-	mascot character to compete with Nintendo's mascot Mario. Its success helped Sega become one of the leading video
-	game companies during the 16-bit era of the early 1990s. Sega Technical Institute developed the next three Sonic
-	games in addition to Sonic Spinball (1993). After a hiatus during the unsuccessful Saturn era, the first major 
-	3D Sonic game, Sonic Adventure, was released in 1998 for the Dreamcast. Sega exited the console market and shifted 
-	to third-party development in 2001, continuing the series on Nintendo, Xbox, and PlayStation systems.</p>
-	<p class="green"> While Sonic games often have unique game mechanics and stories, they feature recurring elements such as the ring-based health system, locations, and speedy gameplay. Games typically feature Sonic setting out to stop Eggman's schemes for world domination, and the player navigates levels that include springs, slopes, bottomless pits, and vertical loops. While Sonic and Eggman were the only characters introduced in the first game, the series would go on to have a large cast of characters; some, such as Miles "Tails" Prower, Knuckles the Echidna, and Shadow the Hedgehog, starred in self-titled spin-offs. 
-	The franchise has also been represented in crossovers such as Sega All-Stars and Nintendo's Super Smash Bros. series.</p>
-	<p class="red"> Sonic the Hedgehog is Sega's flagship franchise and one of the bestselling video game franchises, 
-	selling 89 million by March 2011 and grossing over $5 billion by 2014. Series sales and free-to-play mobile game 
-	downloads totaled 920 million by 2019. The Genesis Sonic games have been described as representative of the culture 
-	of the 1990s and listed among the greatest of all time. Although later games have been criticized for a perceived decline in quality compared to earlier installments, 
-	Sonic is influential in the video game industry and is frequently referenced in popular culture.</p>
-	<p class="red">In 1990, Sega of Japan president Hayao Nakayama decided Sega needed a flagship series and mascot to 
-	compete with Nintendo's Mario series. Nintendo had recently released Super Mario Bros. 3, at the 
-	time the bestselling video game ever. Sega's strategy had been based on porting its successful arcade games to 
-	its 16-bit console, the Genesis; however, Nakayama recognized that Sega needed a star character in a game that 
-	could demonstrate the power of the Genesis's hardware. An internal contest was held to determine a flagship 
-	game and company mascot, with a specific focus on the American audience. Among the various teams working on 
-	proposals were artist Naoto Ohshima and programmer Yuji Naka. The gameplay of Sonic the Hedgehog (1991) 
-	originated with a tech demo created by Naka, who had developed an algorithm that allowed a sprite to move 
-	smoothly on a curve by determining its position with a dot matrix. Naka's prototype was a platform game that 
-	involved a fast-moving character rolling in a ball through a long winding tube.
-	Sega management accepted the duo's project and they were joined by designer Hirokazu Yasuhara.</p>
+	<p class="color1">Sausages are a meat product usually made from ground meat, often pork, beef, or poultry, along with salt, spices and other flavourings. Other ingredients such as grains or breadcrumbs may be included as fillers or extenders. Some sausages include other ingredients for flavour.</p>
+	<p class="color1">The word "sausage" can refer to the loose sausage meat, which can be formed into patties or stuffed into a skin. When referred to as "a sausage," the product is usually cylindrical and encased in a skin.
+		Typically, a sausage is formed in a casing traditionally made from intestine but sometimes from synthetic materials. Sausages that are sold raw are cooked in many ways, including pan-frying, broiling and barbecuing. Some sausages are cooked during processing and the casing may then be removed.</p>
+	<p class="color1"> The word "sausage" was first used in English in the mid-15th century, spelled "sawsyge". This word came from Old North French saussiche (Modern French saucisse)". The French word came from Vulgar Latin salsica (sausage), from salsicus (seasoned with salt).</p>
+	<p class="color2">Sausage making is a traditional food preservation technique. Sausages may be preserved by curing, drying (often in association with fermentation or culturing, which can contribute to preservation), smoking, or freezing. Some cured or smoked sausages can be stored without refrigeration. Most fresh sausages must be refrigerated or frozen until they are cooked.</p>
+	<p class="color2">Sausages come in a huge range of national and regional varieties, which differ by their flavouring or spicing ingredients (garlic, peppers, wine, etc.), the meat(s) used in them and their manner of preparation.</p>
 	
-	<img src="sonic.png">
+	<img src="saucisse_de_morteau.jpg">
 	
 	<ol>
-		<li>Sonic</li>
-		<li>Knuckles</li>
-		<li>Tails</li>
+		<li>Morteau</li>
+		<li>Montbéliart</li>
+		<li>Krajańska</li>
 	<ol>
 	
   </body>
