--- a/shopping.html
+++ b/shopping.html
@@ -6,12 +6,12 @@
   </head>
   <body>
 		<div>
-		<input type="checkbox" id="important" name="important" value="important">
-		<label for="important"> Is important</label>
+		<input type="checkbox" id="delivery" name="delivery" value="delivery">
+		<label for="delivery">Fast delivery</label>
 	</div>
 	<div>
-		<input type="checkbox" id="groceries" name="groceries" value="groceries">
-		<label for="groceries"> Can be bought in groceries</label>
+		<input type="checkbox" id="gift" name="gift" value="gift">
+		<label for="gift">Gift option</label>
 	</div>
 	<div>
 		<label for="item">Item to buy</label>
